# RTSAlloc

./: CMakeLists.txt  README.md
RTSAlloc/: CMakeLists.txt  main.cpp  settings.hpp
RTSAlloc/allocators/: RTSAllocator.hpp  RTSAllocatorInstance.hpp  Singleton.hpp
RTSAlloc/rts/: rts_allocator.c  rts_allocator.h
